--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="js/welcome.js"></script>
 <title>Congrats!</title>
 </head>
-<body>
+<body bgcolor=#151B8D>
 <a href="http://github.com/eiichiro/gig">
 <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub">
 </a>
